# inference-server

./: .gitignore  Cargo.toml  Dockerfile  PERFORMANCE.md  build.rs
.github/workflows/: release-image.yml
benches/: matmul_bench.rs
model_repository/matmul/1/: config.pbtxt
proto/: grpc_service.proto  health.proto
samples/: int64_to_float64.json  int64_to_float64.onnx  int64_to_float64.py  matmul.onnx  matmul.py  requirements.txt  run_perf_analyser.sh  test_triton_client.py
src/: cli.rs  lib.rs  loader.rs  main.rs  scheduler.rs
src/grpc/: compat.rs  inference.rs  mod.rs
src/metrics/: local.rs  mod.rs  registry.rs  server.rs
src/model_repository/: config.rs  mod.rs  repository.rs
src/model_runtime/: manager.rs  mod.rs  session_starter.rs
src/tensor/: batched_inputs.rs  batched_tensor.rs  mod.rs  supertensor.rs  tensor_ringbuffer.rs
src/tracing/: mod.rs
