[package]
name = "inference-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.47.0", features = ["full"] }
criterion = "0.5.1"
ort = { version = "2.0.0-rc.11", features = [ "cuda"] }
ort-sys = { version = "=2.0.0-rc.11", default-features = false }
rand = "0.9.1"
futures = "0.3.31"
# S3 SDK crate (see section below for choice)
rust-s3 = "0.35"    # for example, using rust-s3 library
tokio-stream = "0.1.17"
# GRPC Stuff
tonic-prost = "0.14.0"
tonic = "0.14"
tonic-build = "0.14"
prost = "0.14"
prost-types = "0.14"
tower-http = { version = "0.5", features = ["trace"] }
tower ={ version = "0.5.2", features = ["limit"] }
http = "1.3.1"
# console-subscriber = "0.4.1"
num-traits = "0.2.19"
arc-swap = "1.7.1"
bytemuck = "1.24.0"
log = "0.4.28"
tokio-hrtime = "0.1.6"

[profile.dev]
opt-level = 2
panic = 'abort'

[build-dependencies]
tonic-prost-build = "0.14.0"
