[package]
name = "inference-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.47.0", features = ["full"] }
monoio = { version = "0.2", features = ["sync"] }
criterion = "0.5.1"
ort = { git = "https://github.com/pykeio/ort", branch = "main", features = [ "cuda", "load-dynamic"] }
ort-sys = { git = "https://github.com/pykeio/ort", branch = "main", default-features = false }
rand = "0.9.1"
futures = "0.3.31"
# S3 SDK crate (see section below for choice)
rust-s3 = "0.35"    # for example, using rust-s3 library
# GRPC Stuff
pajamax = { git = "https://github.com/geobeau/pajamax", branch = "main"}
prost = "0.13"
prost-types = "0.13"
async-trait = "0.1"
local-sync = "0.1"
# console-subscriber = "0.4.1"
num-traits = "0.2.19"
arc-swap = "1.7.1"
bytemuck = "1.24.0"
log = "0.4.28"

[profile.dev]
opt-level = 2
panic = 'abort'

[build-dependencies]
pajamax-build = { path = "../pajamax/pajamax-build" }
prost-build = "0.13"
